--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,7 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          plugin_languages: yes
+          plugin_languages_indepth: yes
+          commits_authoring: Luciano Pereira, lucianofullstack, lucianofullstack@users.noreply.github.com
           token: ${{ secrets.METRICS_TOKEN }}
