--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
           plugin_languages_indepth: yes
           commits_authoring: Luciano Pereira, lucianofullstack, lucianofullstack@users.noreply.github.com
           extras_css: |
-            h2.field { color: #969289!important }
+            h1.field, h2.field { color: #969289!important }
           token: ${{ secrets.METRICS_TOKEN }}
