--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,9 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lucianofullstack/metrics
+      - uses: lowlighter/metrics@latest
         with:
+          filename: metrics.svg
           plugin_languages: yes
           plugin_languages_indepth: yes
           commits_authoring: Luciano Pereira, lucianofullstack, lucianofullstack@users.noreply.github.com
