--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,6 @@ jobs:
           commits_authoring: Luciano Pereira, lucianofullstack, lucianofullstack@users.noreply.github.com
           extras_css: |
             h1.field, h2.field, h3.field { color: #969289!important }
+            .field svg { fill:#969289!important}
             footer {display: none!important}
           token: ${{ secrets.METRICS_TOKEN }}
