--- a/.github/workflows/blogposts.yml
+++ b/.github/workflows/blogposts.yml
@@ -1,16 +1,18 @@
-name: Latest Blog Posts
+name: Latest blog post workflow
 on:
-  schedule:
+  schedule: 
     - cron: '0 0 * * *' 
   workflow_dispatch:
+permissions:
+  contents: write
 jobs:
-  update-readme-with-blog-posts:
-    name: Update README with latest blog posts
+  update-readme-with-blog:
+    name: Update this repo's README with latest blog posts
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Pull in latest blog posts
-        uses: gautamkrishnar/blog-post-workflow@master
+        uses: actions/checkout@v3
+      - name: Pull in dev.to posts
+        uses: gautamkrishnar/blog-post-workflow@v1
         with:
           feed_list: "https://lucianofullstack.github.io/articles/feed.xml"
