--- a/.github/workflows/blogposts.yml
+++ b/.github/workflows/blogposts.yml
@@ -1,8 +1,8 @@
 name: Posts
 on:
-  schedule: 
-    - cron: '0 0 * * *' 
+  schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
+  push: {branches: ["master", "main"]}
 permissions:
   contents: write
 jobs:
