--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: ":octocat: Luciano Fullstack"
+      - name: Luciano Fullstack
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.svg
